mysql/mysql.yaml
#mysqldb deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysqldb-deployment
  labels:
    app: mysqldb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysqldb
  template:
    metadata:
      labels:
        app: mysqldb
    spec:
      containers:
        - name: mysqldb
          image: mysql:8.0
          args:
            - "--default-authentication-plugin=mysql_native_password"
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysqldb-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysqldb-persistent-storage
          persistentVolumeClaim:
            claimName: mysqldb-pvc

#mysqldb service
---
apiVersion: v1
kind: Service
metadata:
  name: mysqldb-service
spec:
  selector:
    app: mysqldb #As a ref from deployment labels
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306 #As a ref from target containerPort
