mysql/phpmyadmin.yaml
#phpmyadmin deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpmyadmin-deployment
  labels:
    app: phpmyadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpmyadmin
  template:
    metadata:
      labels:
        app: phpmyadmin
    spec:
      containers:
        - name: phpmyadmin
          image: phpmyadmin/phpmyadmin
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin-internal-service
spec:
  selector:
    app: phpmyadmin
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
#phpmyadmin external service
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: phpmyadmin-external-service
# spec:
#   selector:
#     app: phpmyadmin
#   type: LoadBalancer #For external service
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#       nodePort: 30001 #For external service. Range between 30000- 32000
