mysql/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: phpmyadmin-ingress
spec:
  rules:
    - host: phpmyadminlocal.com
      http:
        paths:
          - path: /
            backend:
              serviceName: phpmyadmin-internal-service
              servicePort: 8080

      # each time run the command 'minikube addons enable ingress' when you start minikube minikube addons enable ingress
